<resources>
    <string name="app_name">Pelvicfloortraining</string>
    <string name="Dagbog.menu.Træningmængde">Træningsmængde</string>
    <string name="Main.training">Training</string>
    <string name="Dagbog.menu.Vandladning">Vandladning</string>
    <string name="Dagbog.menu.væske">indtaget Væske </string>
    <string name="Main.dairy">Dairy </string>
    <string name="Connect">Connect</string>
    <string name="Scan">Scan</string>
    <string name="Tittle.Bluetooth">Bluetooth Devices</string>
    <string name="StartButtonLabel">Start</string>
    <string name="PauseButtonLabel">Pause</string>
    <string name="StopButtonLabel">Stop</string>
    <string name="timerVal">00:00:00</string>
    <string name="CurrentPressure"> Current pressure </string>
    <string name="Maxpressure"> Max pressure </string>
    <string name="Workout"> Workout</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="Urination">Urination</string>
    <string name="Next">Next</string>
    <string name="name_fluidIntake">Fluid intake</string>
    <string name="fluidIntake">Fluid intake [mL]</string>
    <string name="Leakage">Leakage (yes/no)</string>
    <string name="amount_urination">Urination [mL]</string>


</resources>
